Mostly just thinking datastructures ✏
