# api/docs/swagger.yaml
@@ -4,6 +4,8 @@ definitions:
     properties:
       birthday:
         type: string
+      father:
+        $ref: '#/definitions/models.Person'
       firstname:
         type: string
       fullname:
@@ -14,6 +16,8 @@ definitions:
         type: string
       middlenames:
         type: string
+      mother:
+        $ref: '#/definitions/models.Person'
     type: object
 host: localhost:8080
 info:
@@ -70,6 +74,32 @@ paths:
           schema:
             type: string
       summary: Get Person
+      tags:
+      - person
+    post:
+      consumes:
+      - application/json
+      description: Creates a Person
+      parameters:
+      - description: Person ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Person
+        in: body
+        name: person
+        required: true
+        schema:
+          $ref: '#/definitions/models.Person'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Create Person link
       tags:
       - person
 securityDefinitions:
