# api/models/familytree.go
@@ -1,0 +1,6 @@
+package models
+
+type FamilyTree struct {
+	Nodes []Person
+	Edges []Relation
+}
